@@ -1,3 +1,8 @@
+2002-09-29  Larry Ewing  <lewing@ximian.com>
+
+	* rsvg.c (rsvg_start_ellipse): correct the ellipse rendering
+	coordinates.
+
 2002-09-27  Alexander Larsson  <alexl@redhat.com>
 
 	* NEWS:
